--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -29,9 +30,12 @@
     <title>React App</title>
   </head>
   <body>
+    <link rel="myApp" href="%PUBLIC_URL%/index.js" />
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <H1>Test</H1>
+
+
+    <!-- <H1>Test</H1> -->
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
