Move back the index.html file to public dir

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
     <title>React App</title>
   </head>
   <body>
+    <h2> YOLO </h2>
     <link rel="myApp" href="%PUBLIC_URL%/index.js" />
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
